Fix the layout issues.

--- a/index.css
+++ b/index.css
@@ -23,6 +23,7 @@ body {
     background: none ;
     box-shadow: none;
     padding: 15px;
+    position: absolute;
 }
 
 section {
@@ -51,9 +52,8 @@ section {
 #background {
     z-index: -1;
     position: fixed;
-    margin-top: -100px;
     width: 100%;
-    height: 110%;
+    height: 100%;
     
     background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url('hero.png');
     -webkit-background-size: cover;
